--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lint": "turbo lint"
   },
   "devDependencies": {
-    "turbo": "^2.0.4",
-    "typescript": "^5.4.5"
+    "turbo": "^2.0.4"
   },
   "packageManager": "pnpm@9.4.0"
 }
