--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,12 +16,14 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@repo/eslint-config": "workspace:*",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
+    "eslint": "^9.5.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-loader": "^9.4.3",
