--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,5 +13,9 @@
     "nuxt": "^3.12.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
+  },
+  "devDependencies": {
+    "@repo/eslint-config": "workspace:*",
+    "eslint": "^9.5.0"
   }
 }
