chore: nuxtとnestのeslint-custom使用設定

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,8 @@
     "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main"
+    "start:prod": "node dist/main",
+    "lint": "eslint \"**/*.ts\" --fix"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
