--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "lint": "eslint \"**/*.{ts,vue}\" --fix",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
