--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "turbo lint"
   },
   "devDependencies": {
+    "dotenv-cli": "^7.4.2",
     "turbo": "^2.0.4"
   },
   "packageManager": "pnpm@9.4.0"
