--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -12,12 +12,15 @@
     "db:generate": "prisma generate",
     "db:push": "pnpm prisma:dev db push --skip-generate",
     "db:mg": "pnpm prisma:dev migrate dev",
-    "db:deploy": "pnpm dlx prisma generate && pnpm dlx prisma migrate deploy && pnpm build"
+    "db:deploy": "pnpm dlx prisma generate && pnpm dlx prisma migrate deploy && pnpm build",
+    "lint": "eslint \"**/*.ts\" --fix"
   },
   "dependencies": {
     "@prisma/client": "^5.15.0"
   },
   "devDependencies": {
+    "@repo/eslint-config": "workspace:*",
+    "eslint": "^9.5.0",
     "prisma": "^5.15.0",
     "typescript": "^5.5.2"
   }
