--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,10 +17,12 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@repo/eslint-config": "workspace:*",
+    "@swc/cli": "^0.3.14",
+    "@swc/core": "^1.6.5",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
