install(backend): pinoをインストール

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint \"**/*.ts\" --fix"
   },
   "dependencies": {
-    "@repo/db": "workspace:*",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@repo/db": "workspace:*",
+    "nestjs-pino": "^4.1.0",
+    "pino-http": "^10.1.0",
+    "pino-pretty": "^11.2.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
