--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,6 +16,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@repo/db": "workspace:*",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "nestjs-pino": "^4.1.0",
     "pino-http": "^10.1.0",
     "pino-pretty": "^11.2.1",
