--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,10 @@
     {
       "rule": "@stylistic/*",
       "severity": "off"
+    },
+    {
+      "rule": "@stylistic/no-mixed-operators",
+      "severity": "warn"
     }
   ],
   "[javascript]": {
