--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,8 +11,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.11",
     "@repo/db": "workspace:*",
     "nuxt": "^3.12.2",
+    "nuxt-quasar-ui": "^2.1.3",
+    "quasar": "^2.16.4",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
