chore: vercelデプロイ用ビルド設定
- vercelではturboが使えるのでturbo build
- db buildスクリプトをデプロイ環境専用に変更
- render deployスクリプトをこれに合わせて変更

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "render:deploy": "pnpm install --frozen-lockfile && pnpm -F db db:deploy && pnpm -F backend build"
+    "render:deploy": "pnpm install --frozen-lockfile && pnpm -F db build && pnpm -F backend build"
   },
   "devDependencies": {
     "dotenv-cli": "^7.4.2",
