--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,7 +7,7 @@
     ".": "./dist/index.js"
   },
   "scripts": {
-    "build": "pnpm dlx prisma migrate deploy && tsc",
+    "build": "prisma migrate deploy && prisma generate && tsc",
     "prisma:dev": "dotenv -e ../../.env -- prisma",
     "db:generate": "prisma generate",
     "db:push": "pnpm prisma:dev db push --skip-generate",
