--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,6 +21,8 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
+    "@vite-pwa/assets-generator": "^0.2.4",
+    "@vite-pwa/nuxt": "^0.8.1",
     "eslint": "^9.5.0"
   }
 }
