--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@vite-pwa/assets-generator": "^0.2.4",
-    "eslint": "^9.5.0"
+    "eslint": "^9.5.0",
+    "sass": "^1.77.6"
   }
 }
