chore(frontend): nuxtのbuild時のnpxに-yを付けた
turboのせいかyが入力できなかったため

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "npx nuxi typecheck && nuxt build",
+    "build": "npx -y nuxi typecheck && nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
