--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,7 +17,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@repo/db": "workspace:*",
+    "@supabase/supabase-js": "^2.44.3",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "nestjs-pino": "^4.1.0",
