--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,6 +22,7 @@
     "@types/multer": "^1.4.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "express": "^4.19.2",
     "nestjs-pino": "^4.1.0",
     "pino-http": "^10.1.0",
     "pino-pretty": "^11.2.1",
