--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "deploy:render": "pnpm install --frozen-lockfile && pnpm -F db build && pnpm -F backend build",
-    "deploy:vercel": "pnpm install --frozen-lockfile && pnpm -F db build && pnpm -F frontend build"
+    "deploy:render": "pnpm install --frozen-lockfile && pnpm -F db build:backend && pnpm -F backend build",
+    "deploy:vercel": "pnpm install --frozen-lockfile && pnpm -F db build:frontend && pnpm -F frontend build"
   },
   "devDependencies": {
     "dotenv-cli": "^7.4.2",
