--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -12,8 +12,8 @@
     "build:frontend": "prisma generate && tsc",
     "prisma:dev": "dotenv -e ../../.env -- prisma",
     "db:generate": "prisma generate",
-    "db:push": "pnpm prisma:dev db push --skip-generate",
-    "db:mg": "pnpm prisma:dev migrate dev",
+    "db:push": "prisma db push --skip-generate",
+    "db:mg": "prisma migrate dev",
     "db:seed": "prisma db seed",
     "lint": "eslint \"**/*.ts\" --fix"
   },
