--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@repo/db": "workspace:*",
+    "@supabase/storage-js": "^2.6.0",
     "@supabase/supabase-js": "^2.44.3",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.11",
