chore(devcontainer): devcontainer作成時にdb packageのビルドとシードを実行するよう設定

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,5 +13,5 @@
       ]
     }
   },
-  "postCreateCommand": "pnpm install && pnpm -F db db:mg"
+  "postCreateCommand": "pnpm install && pnpm -F db build && pnpm -F db db:seed"
 }
